docs: update to use a transformer model to gather the sentiment for the records

--- a/docs/_source/guides/llms/examples/trainer-feedback-setfit.ipynb
+++ b/docs/_source/guides/llms/examples/trainer-feedback-setfit.ipynb
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -312,22 +312,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "At this point, our dataset contains the structure but no records to train our model. Let's create them."
+    "At this point, our dataset contains the structure but no records to train our model. The examples have the topics already labelled, but that's not the case for the sentiment. In this case we will use a [transformer model](https://huggingface.co/cardiffnlp/twitter-roberta-base-sentiment-latest) pretrained to get the sentiment.\n",
+    "\n",
+    "Let's create the records."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import pipeline\n",
+    "\n",
+    "sentiment_classifier = pipeline(model=\"cardiffnlp/twitter-roberta-base-sentiment-latest\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
     "\n",
+    "random.seed(1234)\n",
+    "\n",
     "record_indices = random.choices(range(len(data)), k=8)\n",
     "\n",
     "\n",
-    "def random_sentiment() -> str:\n",
-    "    return random.choice([\"positive\", \"neutral\", \"negative\"])\n",
+    "def get_sentiment(text: str) -> str:\n",
+    "    return sentiment_classifier(text)[0][\"label\"]\n",
     "\n",
     "\n",
     "def topic_int2str(label_int: int) -> str:\n",
@@ -340,8 +355,8 @@
     "        responses=[\n",
     "            {\n",
     "                \"values\": {\n",
-    "                    # Insert a random sentiment for demo purposes\n",
-    "                    \"sentiment\": {\"value\": random_sentiment()},\n",
+    "                    # Get the sentiment from a pretrained transformer model\n",
+    "                    \"sentiment\": {\"value\": get_sentiment(record[\"text\"])},\n",
     "                    # Add the topics as a list\n",
     "                    \"topics\": {\"value\": [topic_int2str(record[\"label\"])]}\n",
     "                }\n",
@@ -356,7 +371,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's review the previous block of code. Please note that this `FeedbackDataset` only serves for demo purposes. We will select just 8 examples (in `record_indices` we store the indices of the records that we will grab from the original dataset) for faster training, and simulate the sentiment for simplicity (hence the function `random_sentiment`).\n",
+    "Let's review the previous block of code. Please note that this `FeedbackDataset` only serves for demo purposes. We will select just 8 examples (in `record_indices` we store the indices of the records that we will grab from the original dataset) for faster training, and obtain the sentiment from our `sentiment_classifier`. We have a model good enough for our purposes available at the [hugging face hub](https://huggingface.co/models), but if that would not be the case, we could use a \"good enough\" one to get suggestions and label it properly to train our model, have a look at this [tutorial](https://docs.argilla.io/en/latest/guides/llms/examples/labelling-feedback-setfit.html#Train-the-models) for more information.\n",
     "\n",
     "Regarding the topics, the original dataset comes already labelled, so we only need to insert the corresponding name. `topic_int2str` does the mapping for us."
    ]
@@ -370,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -410,33 +425,21 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>I used an ATM in a foreign currency but the ra...</td>\n",
-       "      <td>[{'user_id': None, 'value': ['wrong_exchange_r...</td>\n",
+       "      <th>5</th>\n",
+       "      <td>My refund is missing</td>\n",
+       "      <td>[{'user_id': None, 'value': ['Refund_not_showi...</td>\n",
        "      <td>[{'user_id': None, 'value': 'negative', 'statu...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>I don't understand why it says I have to verif...</td>\n",
-       "      <td>[{'user_id': None, 'value': ['verify_top_up'],...</td>\n",
+       "      <th>6</th>\n",
+       "      <td>How long does it take to process transfers fro...</td>\n",
+       "      <td>[{'user_id': None, 'value': ['transfer_timing'...</td>\n",
        "      <td>[{'user_id': None, 'value': 'neutral', 'status...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>I submitted a transaction to the incorrect acc...</td>\n",
-       "      <td>[{'user_id': None, 'value': ['cancel_transfer'...</td>\n",
-       "      <td>[{'user_id': None, 'value': 'positive', 'statu...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>What currencies is an exchange rate calculated...</td>\n",
-       "      <td>[{'user_id': None, 'value': ['exchange_rate'],...</td>\n",
-       "      <td>[{'user_id': None, 'value': 'negative', 'statu...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Do you know where my card will be accepted?</td>\n",
-       "      <td>[{'user_id': None, 'value': ['card_acceptance'...</td>\n",
+       "      <th>7</th>\n",
+       "      <td>Will you handle EUR?</td>\n",
+       "      <td>[{'user_id': None, 'value': ['fiat_currency_su...</td>\n",
        "      <td>[{'user_id': None, 'value': 'neutral', 'status...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -445,34 +448,28 @@
       ],
       "text/plain": [
        "                                                text  \\\n",
-       "0  I used an ATM in a foreign currency but the ra...   \n",
-       "1  I don't understand why it says I have to verif...   \n",
-       "2  I submitted a transaction to the incorrect acc...   \n",
-       "3  What currencies is an exchange rate calculated...   \n",
-       "4        Do you know where my card will be accepted?   \n",
+       "5                               My refund is missing   \n",
+       "6  How long does it take to process transfers fro...   \n",
+       "7                               Will you handle EUR?   \n",
        "\n",
        "                                              topics  \\\n",
-       "0  [{'user_id': None, 'value': ['wrong_exchange_r...   \n",
-       "1  [{'user_id': None, 'value': ['verify_top_up'],...   \n",
-       "2  [{'user_id': None, 'value': ['cancel_transfer'...   \n",
-       "3  [{'user_id': None, 'value': ['exchange_rate'],...   \n",
-       "4  [{'user_id': None, 'value': ['card_acceptance'...   \n",
+       "5  [{'user_id': None, 'value': ['Refund_not_showi...   \n",
+       "6  [{'user_id': None, 'value': ['transfer_timing'...   \n",
+       "7  [{'user_id': None, 'value': ['fiat_currency_su...   \n",
        "\n",
        "                                           sentiment  \n",
-       "0  [{'user_id': None, 'value': 'negative', 'statu...  \n",
-       "1  [{'user_id': None, 'value': 'neutral', 'status...  \n",
-       "2  [{'user_id': None, 'value': 'positive', 'statu...  \n",
-       "3  [{'user_id': None, 'value': 'negative', 'statu...  \n",
-       "4  [{'user_id': None, 'value': 'neutral', 'status...  "
+       "5  [{'user_id': None, 'value': 'negative', 'statu...  \n",
+       "6  [{'user_id': None, 'value': 'neutral', 'status...  \n",
+       "7  [{'user_id': None, 'value': 'neutral', 'status...  "
       ]
      },
-     "execution_count": 316,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset.format_as(\"datasets\").to_pandas().head()[[\"text\", \"topics\", \"sentiment\"]]"
+    "dataset.format_as(\"datasets\").to_pandas()[-3:][[\"text\", \"topics\", \"sentiment\"]]"
    ]
   },
   {
