--- a/docs/_source/guides/llms/examples/train-reward-model-rlhf.ipynb
+++ b/docs/_source/guides/llms/examples/train-reward-model-rlhf.ipynb
@@ -651,7 +651,7 @@
         "        rejected = sample[\"response-1\"]\n",
         "    return chosen, rejected\n",
         "\n",
-        "task = TrainingTask.for_reward_modelling(formatting_func=formatting_func)"
+        "task = TrainingTask.for_reward_modeling(formatting_func=formatting_func)"
       ]
     },
     {
