--- a/frontend/translation/en.json
+++ b/frontend/translation/en.json
@@ -3,5 +3,8 @@
   "ranking": "Ranking",
   "label_selection": "Label",
   "text": "Text",
-  "rating": "Rating"
+  "rating": "Rating",
+  "saving": "Saving...",
+  "saved": "Saved",
+  "submit-your-feedback": "Submit your feedback"
 }
