Revision, videos and images

--- a/docs/_source/guides/llms/examples/fine-tuning-openai-rag-feedback.ipynb
+++ b/docs/_source/guides/llms/examples/fine-tuning-openai-rag-feedback.ipynb
@@ -1,14 +1,17 @@
 {
   "cells": [
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "FOyRtBFaD8Ti"
       },
       "source": [
-        "# Fine-tuning and evaluating GPT-3.5 for RAG with human feedback\n",
+        "# 🪄 Fine-tuning and evaluating GPT-3.5 with human feedback for RAG \n",
         "\n",
-        "This guide explains how to fine-tune OpenAI's GPT3.5-turbo with your own data and Argilla to improve a RAG (Retrieval Augmented Generation) system. It includes:\n",
+        "This guide explains how to fine-tune OpenAI's GPT3.5-turbo with your own data and Argilla to improve a RAG (Retrieval Augmented Generation) system. \n",
+        "\n",
+        "It includes the following steps:\n",
         "\n",
         "- Setting up a RAG pipeline using LlamaIndex and Unstructured.\n",
         "- Generating questions with LlamaIndex\n",
@@ -16,7 +19,13 @@
         "- Fine-tuning GPT3.5-turbo with demonstration data\n",
         "- Evaluating the fine-tuned model vs the base model with human preference data from Argilla.\n",
         "\n",
+        "The goal of the tutorial is to demonstrate how to incorporate human feedback into your LLM development for two critical stages: gathering **high quality data for fine-tuning**, and gathering **human feedback for evaluation of LLM applications**.\n",
+        "\n",
+        "As there's a lot of discussion going on about RAG (Retrieval Augmented Generation) vs fine-tuning, we choose a RAG use case with real data to show how fine-tuning can help to improve the style, usefulness, and relevancy of responses in a RAG application. The resulting system will be Hybrid RAG system (RAG using fine-tuned models) as [described in this article](https://towardsdatascience.com/rag-vs-finetuning-which-is-the-best-tool-to-boost-your-llm-application-94654b1eaba7).\n",
+        "\n",
         "Let's get started!\n",
+        "\n",
+        "![Fine-tuned model vs base model](../../../_static/images/llms/fine-tuning-openai-rag-feedback/fine-tune-vs-base.png \"Fine-tuned model vs base model\")\n",
         "\n",
         "## Setup\n",
         "\n",
@@ -92,16 +101,18 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
+      "metadata": {
+        "id": "vQyHgesOKG7x"
+      },
       "source": [
         "## Introduction\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "vQyHgesOKG7x"
-      }
+      ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "K4ExAXiKSCu5"
@@ -109,7 +120,7 @@
       "source": [
         "## Generating responses with LlamaIndex and GPT3.5\n",
         "\n",
-        "We generate responses for the generated questions using [this dataset with questions about Argilla Cloud](https://huggingface.co/datasets/argilla/cloud_assistant_questions). We have generated this dataset using a source document and LlamaIndex's question generator (see appendix showing how to generate these questions).\n",
+        "We generate responses for the generated questions using [this dataset about Argilla Cloud](https://huggingface.co/datasets/argilla/cloud_assistant_questions). We have generated this dataset using a source document and LlamaIndex's question generator (see appendix about how to generate these questions).\n",
         "\n",
         "If you want to skip this process (it will take several minutes), we have shared the resulting [dataset on Hugging Face](https://huggingface.co/datasets/argilla/rg_customer_assistant).\n",
         "\n",
@@ -192,6 +203,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "y6Bavj4Abkwa"
@@ -205,7 +217,7 @@
         "\n",
         "For fine-tuning, we need to setup a text question to gather the human written or edited responses. This data is known as completion or demonstration data.\n",
         "\n",
-        "Additionally, leveraging the multi-aspect capabilities of Argilla, we set up two additional feedback dimensions to rate the relevance of the question (as they're synthetic they might be irrelevant) and the quality of the context retrieved from our retriever component (can be used to improve the RAG configuration).\n",
+        "Additionally, leveraging the multi-aspect feedback capabilities of Argilla, we set up two additional feedback dimensions to rate the relevance of the question (as they're synthetic they might be irrelevant or bad quality) and the quality of the context retrieved from our retriever component (can be used to improve the RAG configuration).\n",
         "\n"
       ]
     },
@@ -228,13 +240,14 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
-      "source": [
-        "We use the questions, context, and generated responses to build our feedback records. We pre-fill responses with OpenAI's responses using feedback `suggestions` and ask our labelers to edit them if neccesary."
-      ],
       "metadata": {
         "id": "btwbDF6_PayX"
-      }
+      },
+      "source": [
+        "We use the questions, context, and generated responses to build our feedback records. We pre-fill the responses in the UI with OpenAI's responses using `suggestions` and ask our labelers to edit them if neccesary."
+      ]
     },
     {
       "cell_type": "code",
@@ -268,6 +281,17 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Now, the dataset is available for collecting feedback with the Argilla UI. Here's a video showing the workflow for labelers:\n",
+        "\n",
+        "<iframe width=\"100%\" height=\"450\" src=\"https://www.youtube.com/embed/UoMZOxFXfKI\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>"
+      ]
+    },
+    {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "9yLxmSDsQPts"
@@ -349,6 +373,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "SVvdU9EqVWSR"
@@ -401,6 +426,7 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "eG-zXJJ2dbi_"
@@ -408,20 +434,16 @@
       "source": [
         "## Evaluating base vs fine-tuned with human preference data\n",
         "\n",
-        "We setup a new feedback dataset for gathering human feedback to evaluate our fine-tuned model against the base model, using the test dataset.\n",
+        "We setup a new feedback dataset for gathering human feedback to evaluate the fine-tuned model against the base model, using the test dataset.\n",
         "\n",
-        "There are many ways to collect feedback for this phase. The most suitable in this case is collection human preference data over responses from the two models: *asking our labelers which response is the most accurate and helpful*. We can easily do this with Argilla's `RankingQuestion`.\n",
+        "There are many ways to collect feedback for this phase. The most suitable in this case is human preference data over responses from the two models: *asking our labelers which response is the most accurate and helpful*. We can easily do this with Argilla's `RankingQuestion`.\n",
         "\n",
-        "Additionally, as both responses can be bad, we can ask labelers to write down a correct response. In this case, we'll be collecting demonstration data to add to our fine-tuning workflow.\n",
+        "Additionally, as both responses can be equally bad, we can ask labelers to write down a correct response. In this case, we would be collecting demonstration data to add to our fine-tuning workflow.\n",
         "\n",
         "\n",
         "### Create dataset and collect feedback\n",
         "\n",
-        "We setup and publish a new dataset with a `RankingQuestion` and `TextQuestion`, showing our labelers the `user-message` and two responses (from the base and one the fine-tuned model).\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
+        "We setup and publish a new dataset with a `RankingQuestion` and `TextQuestion`, showing our labelers the `user-message` and two responses (from the base and the fine-tuned models)."
       ]
     },
     {
@@ -497,17 +519,18 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
+      "metadata": {
+        "id": "hsPoYfgJTCOD"
+      },
       "source": [
         "An important step here is to randomize the order in which responses are shown.\n",
         "\n",
-        "If we show the fine-tuned model response always as the first option, we can introduce position bias (labelers always choosing a certain position) or making it evident to users there's two clearly different models.\n",
+        "If we show the fine-tuned model response always as the first option, we can introduce position bias (labelers always choosing a certain position) or making it evident to users there are two clearly different models.\n",
         "\n",
         "To avoid this, we randomize the position and keep two metadata fields indicating which model has produced `response-1` and `response-2`. When collecting the responses, we'll use this medata to map the ranking with each model."
-      ],
-      "metadata": {
-        "id": "hsPoYfgJTCOD"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -540,22 +563,46 @@
       ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Now, the dataset is available for collecting feedback with the Argilla UI. Here's a video showing the workflow for labelers:\n",
+        "\n",
+        "<iframe width=\"100%\" height=\"450\" src=\"https://www.youtube.com/embed/UUK3OB0DH0Q\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen></iframe>"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eRiVf39Bblmh"
+      },
       "source": [
         "### Retrieve and analyze responses\n",
         "\n",
-        "We can dynamically collect the responses from our labelers. In this case, we will compute the win rate and ties (as users can indicated both responses are equal).\n",
+        "We can dynamically collect the responses from our labelers. In this case, we will compute the win rate and ties (as users can indicate both responses are equally good or bad).\n",
         "\n",
-        "For the tutorial, we only have one user but Argilla Feedback is fully multi-user, which means you can collect feedback from several users for each data point, increasing the quality of the evaluation. You can read more about multi-user scenarios and built-in unification methods [on this guide](https://docs.argilla.io/en/latest/guides/llms/practical_guides/collect_responses.html).\n",
+        "For the tutorial, we only have one user but Argilla Feedback is fully multi-user, which means you can collect feedback from several users for each data point, increasing the quality of the evaluation. \n",
         "\n",
-        "With a highly limited evaluation set, we can see that the fine-tuned model responses are preferred 9 times (60%), base model responses 4 times, and they are both equally good or bad 2 times. Even with a very small fine-tuning and evaluation dataset, this already shows promising benefits of fine-tuning models for enhancing RAG systems."
-      ],
-      "metadata": {
-        "id": "eRiVf39Bblmh"
-      }
+        "You can read more about multi-user scenarios and built-in unification methods [on this guide](https://docs.argilla.io/en/latest/guides/llms/practical_guides/collect_responses.html).\n",
+        "\n",
+        "With a very small evaluation set, we can see that the fine-tuned model responses are preferred 9 times (60%), base model responses 4 times, and they are both equally good or bad 2 times. \n",
+        "\n",
+        "\n",
+        "Even with a very small fine-tuning and evaluation dataset, this already shows promising benefits of fine-tuning models for enhancing RAG systems.\n",
+        "\n",
+        "\n",
+        "![Fine-tuned model vs base model](../../../_static/images/llms/fine-tuning-openai-rag-feedback/fine-tune-vs-base.png \"Fine-tuned model vs base model\")"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "XZKBhlKCbwUV"
+      },
+      "outputs": [],
       "source": [
         "dataset = rg.FeedbackDataset.from_argilla(name=\"finetuned-vs-base-preference\", workspace=\"admin\")\n",
         "\n",
@@ -579,15 +626,15 @@
         "        win_rates['tie'] = win_rates['tie'] + 1\n",
         "win_rates\n",
         "# {'ft_model': 9, 'base_model': 4, 'tie': 2}"
-      ],
-      "metadata": {
-        "id": "XZKBhlKCbwUV"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "BpoH-OnRnuoL"
+      },
+      "outputs": [],
       "source": [
         "# let's make the labels more explicit\n",
         "data = {'gpt3.5-fine-tuned': 9, 'gpt3.5-base': 4, 'tie': 2}\n",
@@ -619,14 +666,10 @@
         "\n",
         "# Display\n",
         "plt.show()"
-      ],
-      "metadata": {
-        "id": "BpoH-OnRnuoL"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
       "metadata": {
         "id": "hCrnoTw_GIyr"
@@ -678,19 +721,7 @@
         "    num_questions_per_chunk=100\n",
         ")\n",
         "\n",
-        "questions = dataset_generator.generate_questions_from_nodes(num=300)\n",
-        "print(\"Generated \", len(questions), \" questions\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "JrPOKAX_dlFW"
-      },
-      "outputs": [],
-      "source": [
-        "questions[0:10]"
+        "questions = dataset_generator.generate_questions_from_nodes(num=300)"
       ]
     }
   ],
