--- a/frontend/translation/en.json
+++ b/frontend/translation/en.json
@@ -10,9 +10,9 @@
       "go_to_next_record": "Next (ctrl + →)"
     },
     "questions_form": {
-      "clear": "Clear (⇧ Shift + ␣ Space)",
-      "discard": "Discard (⇧ Shift + ⌫ Backspace)",
-      "submit": "Submit (⇧ Shift + ↵ Enter)"
+      "clear": "Clear (⇧ shift + ␣ space)",
+      "discard": "Discard (⇧ shift + ⌫ backspace)",
+      "submit": "Submit (⇧ shift + ↵ enter)"
     }
   }
 }
