--- a/docs/_source/guides/llms/examples/fine-tuning-openai-rag-feedback.ipynb
+++ b/docs/_source/guides/llms/examples/fine-tuning-openai-rag-feedback.ipynb
@@ -154,7 +154,8 @@
         "# read and parse document using Unstructured\n",
         "UnstructuredReader = download_loader(\"UnstructuredReader\", refresh_cache=True)\n",
         "loader = UnstructuredReader()\n",
-        "documents = loader.load_data(\"/content/argilla_cloud.txt\")\n",
+        "# You can download this doc from: https://huggingface.co/datasets/argilla/cloud_assistant_questions/raw/main/argilla_cloud.txt\n",
+        "documents = loader.load_data(\"argilla_cloud.txt\")\n",
         "\n",
         "# setup Llama index context\n",
         "gpt_35_context = ServiceContext.from_defaults(\n",
