Docs: revise OpenAI fine-tuning tutorial (#3666)
# Argilla Community Growers

Thanks for your contribution! As part of our Community Growers
initiative 🌱, we're donating Justdiggit bunds in your name to reforest
sub-Saharan Africa. To claim your Community Growers certificate, please
contact David Berenstein in our Slack community or fill in this form
https://tally.so/r/n9XrxK once your PR has been merged.

# Pull Request Templates

Please go the the `Preview` tab and select the appropriate sub-template:

* [🐞-bug](?expand=1&template=bug.md)
* [📚-documentation](?expand=1&template=docs.md)
* [🆕-features](?expand=1&template=features.md)
* [🔗-💥-integration](?expand=1&template=integration.md)

# Generic Pull Request Template

Please include a summary of the changes and the related issue. Please
also include relevant motivation and context. List any dependencies that
are required for this change.

Closes #<issue_number>

**Type of change**

(Please delete options that are not relevant. Remember to title the PR
according to the type of change)

- [ ] Bug fix (non-breaking change which fixes an issue)
- [ ] New feature (non-breaking change which adds functionality)
- [ ] Breaking change (fix or feature that would cause existing
functionality to not work as expected)
- [ ] Refactor (change restructuring the codebase without changing
functionality)
- [ ] Improvement (change adding some improvement to an existing
functionality)
- [ ] Documentation update

**How Has This Been Tested**

(Please describe the tests that you ran to verify your changes. And
ideally, reference `tests`)

- [ ] Test A
- [ ] Test B

**Checklist**

- [ ] I added relevant documentation
- [ ] follows the style guidelines of this project
- [ ] I did a self-review of my code
- [ ] I made corresponding changes to the documentation
- [ ] My changes generate no new warnings
- [ ] I have added tests that prove my fix is effective or that my
feature works
-

--- a/docs/_source/guides/llms/examples/fine-tuning-openai-rag-feedback.ipynb
+++ b/docs/_source/guides/llms/examples/fine-tuning-openai-rag-feedback.ipynb
@@ -19,13 +19,30 @@
         "- Fine-tuning GPT3.5-turbo with demonstration data\n",
         "- Evaluating the fine-tuned model vs the base model with human preference data from Argilla.\n",
         "\n",
-        "The goal of the tutorial is to demonstrate how to incorporate human feedback into your LLM development for two critical stages: gathering **high quality data for fine-tuning**, and gathering **human feedback for evaluation of LLM applications**.\n",
+        "The goal of the tutorial is to demonstrate how to incorporate human feedback into your LLM development for two critical stages: \n",
         "\n",
-        "As there's a lot of discussion going on about RAG (Retrieval Augmented Generation) vs fine-tuning, we choose a RAG use case with real data to show how fine-tuning can help to improve the style, usefulness, and relevancy of responses in a RAG application. The resulting system will be Hybrid RAG system (RAG using fine-tuned models) as [described in this article](https://towardsdatascience.com/rag-vs-finetuning-which-is-the-best-tool-to-boost-your-llm-application-94654b1eaba7).\n",
+        "1. Gathering **high quality data for fine-tuning**, \n",
+        "2. Gathering **human feedback for evaluation of LLM applications**.\n",
         "\n",
-        "Let's get started!\n",
+        "\n",
+        "Given the ongoing debate between Retrieval Augmented Generation (RAG) and fine-tuning, we selected a real-world RAG use case to demonstrate how fine-tuning enhances the style, utility, and relevance of responses within a RAG application. The resulting system will be Hybrid RAG system (RAG using fine-tuned models) as [described in this article](https://towardsdatascience.com/rag-vs-finetuning-which-is-the-best-tool-to-boost-your-llm-application-94654b1eaba7). \n",
+        "\n",
+        "The screenshot below displays the evaluation dataset, termed the \"human preference dataset.\" In it, `response-1` is produced by the fine-tuned model, while `response-2` comes from the base GPT-3.5 model. With just minor fine-tuning and without altering the system message, we've directed the LLM's behavior towards generating responses that are more helpful, faithful, friendly, and aligned with our brand.\n",
+        "\n",
+        "Fine-tuning effectively mitigates common RAG challenges, like the LLM referring to the context using phrases such as \"The context does not provide information about this.\" This enhancement is notable even when we had incorporated directives in the system message to deter such references, like \"2. Avoid phrases such as 'Based on the context, ...' or 'The context information ...'.\" (see Llama Index default prompt later).\n",
+        "\n",
+        "\n",
+        "![Human preference](../../../_static/images/llms/fine-tuning-openai-rag-feedback/preference-fine-tuned.png \"Fine-tuned model vs base model response\")\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "By the end of the tutorial, you'll be using a fine-tuned model for RAG and have an human evaluation workflow in place to continously evaluate your LLM application (see below for a comparison of the base gpt3.5 vs the fine-tuned gpt3.5 for this application).\n",
         "\n",
         "![Fine-tuned model vs base model](../../../_static/images/llms/fine-tuning-openai-rag-feedback/fine-tune-vs-base.png \"Fine-tuned model vs base model\")\n",
+        "\n",
+        "\n",
+        "Let's get started!\n",
         "\n",
         "## Setup\n",
         "\n",
@@ -104,17 +121,6 @@
       "attachments": {},
       "cell_type": "markdown",
       "metadata": {
-        "id": "vQyHgesOKG7x"
-      },
-      "source": [
-        "## Introduction\n",
-        "\n"
-      ]
-    },
-    {
-      "attachments": {},
-      "cell_type": "markdown",
-      "metadata": {
         "id": "K4ExAXiKSCu5"
       },
       "source": [
@@ -151,7 +157,8 @@
         "# read and parse document using Unstructured\n",
         "UnstructuredReader = download_loader(\"UnstructuredReader\", refresh_cache=True)\n",
         "loader = UnstructuredReader()\n",
-        "documents = loader.load_data(\"/content/argilla_cloud.txt\")\n",
+        "# You can download this doc from: https://huggingface.co/datasets/argilla/cloud_assistant_questions/raw/main/argilla_cloud.txt\n",
+        "documents = loader.load_data(\"argilla_cloud.txt\")\n",
         "\n",
         "# setup Llama index context\n",
         "gpt_35_context = ServiceContext.from_defaults(\n",
@@ -691,7 +698,10 @@
       "source": [
         "UnstructuredReader = download_loader(\"UnstructuredReader\", refresh_cache=True)\n",
         "loader = UnstructuredReader()\n",
-        "documents = loader.load_data(\"/content/argilla_cloud.txt\")\n",
+        "\n",
+        "# You can download this doc from: https://huggingface.co/datasets/argilla/cloud_assistant_questions/raw/main/argilla_cloud.txt\n",
+        "documents = loader.load_data(\"argilla_cloud.txt\")\n",
+        "\n",
         "\n",
         "gpt_35_context = ServiceContext.from_defaults(\n",
         "    llm=OpenAI(model=\"gpt-3.5-turbo\", temperature=0.4),\n",
