--- a/docs/_source/guides/llms/examples/fine-tuning-openai-rag-feedback.ipynb
+++ b/docs/_source/guides/llms/examples/fine-tuning-openai-rag-feedback.ipynb
@@ -13,7 +13,7 @@
         "\n",
         "It includes the following steps:\n",
         "\n",
-        "- Setting up a RAG pipeline using LlamaIndex and Unstructured.\n",
+        "- Setting up a RAG pipeline using [LlamaIndex](https://github.com/jerryjliu/llama_index) and [Unstructured](https://github.com/Unstructured-IO/unstructured) to answer questions using a document about Argilla Cloud.\n",
         "- Generating questions with LlamaIndex\n",
         "- Building a dataset for collecting human demonstrations with Argilla\n",
         "- Fine-tuning GPT3.5-turbo with demonstration data\n",
@@ -307,7 +307,9 @@
         "## Prepare Argilla dataset for fine-tuning\n",
         "\n",
         "\n",
-        "We now read the responses from Argilla and prepare the dataset for fine-tuning following the [fine-tuning format from OpenAI guides](https://platform.openai.com/docs/guides/fine-tuning)."
+        "We now read the responses from Argilla and prepare the dataset for fine-tuning following the [fine-tuning format from OpenAI guides](https://platform.openai.com/docs/guides/fine-tuning).\n",
+        "\n",
+        "We use the a quick adaptation of LlamaIndex's `TEXT_QA_PROMPT` system prompt and the fine-tuned responses from our Argilla dataset."
       ]
     },
     {
@@ -594,10 +596,10 @@
         "\n",
         "You can read more about multi-user scenarios and built-in unification methods [on this guide](https://docs.argilla.io/en/latest/guides/llms/practical_guides/collect_responses.html).\n",
         "\n",
-        "With a very small evaluation set, we can see that the fine-tuned model responses are preferred 9 times (60%), base model responses 4 times, and they are both equally good or bad 2 times. \n",
+        "With a very small evaluation set, we can see that the fine-tuned model responses are preferred ~60% of the time, 3x over the base model, and they are both equally good or bad ~20% of the time. \n",
         "\n",
         "\n",
-        "Even with a very small fine-tuning and evaluation dataset, this already shows promising benefits of fine-tuning models for enhancing RAG systems.\n",
+        "Even with a very small fine-tuning and evaluation dataset, this already shows **promising benefits of fine-tuning models for enhancing RAG systems**.\n",
         "\n",
         "\n",
         "![Fine-tuned model vs base model](../../../_static/images/llms/fine-tuning-openai-rag-feedback/fine-tune-vs-base.png \"Fine-tuned model vs base model\")"
@@ -611,6 +613,7 @@
       },
       "outputs": [],
       "source": [
+        "# retrieve the dataset from Argilla\n",
         "dataset = rg.FeedbackDataset.from_argilla(name=\"finetuned-vs-base-preference\", workspace=\"admin\")\n",
         "\n",
         "win_rates = {\n",
@@ -619,6 +622,7 @@
         "  'tie': 0\n",
         "}\n",
         "\n",
+        "# compute the win and tie rates\n",
         "for record in dataset.records:\n",
         "  if len(record.responses) > 0:\n",
         "    for response in record.responses:\n",
@@ -632,7 +636,7 @@
         "      else:\n",
         "        win_rates['tie'] = win_rates['tie'] + 1\n",
         "win_rates\n",
-        "# {'ft_model': 9, 'base_model': 4, 'tie': 2}"
+        "# {'ft_model': 17, 'base_model': 6, 'tie': 5}"
       ]
     },
     {
@@ -644,7 +648,7 @@
       "outputs": [],
       "source": [
         "# let's make the labels more explicit\n",
-        "data = {'gpt3.5-fine-tuned': 9, 'gpt3.5-base': 4, 'tie': 2}\n",
+        "data = {'gpt3.5-fine-tuned': 17, 'gpt3.5-base': 6, 'tie': 5}\n",
         "total = sum(data.values())\n",
         "\n",
         "# Calculate percentages\n",
