--- a/docs/_source/guides/llms/examples/fine-tuning-openai-rag-feedback.ipynb
+++ b/docs/_source/guides/llms/examples/fine-tuning-openai-rag-feedback.ipynb
@@ -14,9 +14,9 @@
         "It includes the following steps:\n",
         "\n",
         "- Setting up a RAG pipeline using [LlamaIndex](https://github.com/jerryjliu/llama_index) and [Unstructured](https://github.com/Unstructured-IO/unstructured) to answer questions using a document about Argilla Cloud.\n",
-        "- Generating questions with LlamaIndex\n",
-        "- Building a dataset for collecting human demonstrations with Argilla\n",
-        "- Fine-tuning GPT3.5-turbo with demonstration data\n",
+        "- Generating potential questions with LlamaIndex to build a training and test set.\n",
+        "- Building a dataset for collecting human written responses with Argilla.\n",
+        "- Fine-tuning GPT3.5-turbo with high-quality data.\n",
         "- Evaluating the fine-tuned model vs the base model with human preference data from Argilla.\n",
         "\n",
         "The goal of the tutorial is to demonstrate how to incorporate human feedback into your LLM development for two critical stages: \n",
@@ -332,7 +332,7 @@
       },
       "outputs": [],
       "source": [
-        "# adapation from LlamaIndex's TEXT_QA_PROMPT_TMPL_MSGS[1].content\n",
+        "# adaptation from LlamaIndex's TEXT_QA_PROMPT_TMPL_MSGS[1].content\n",
         "user_message_prompt =\"\"\"Context information is below.\n",
         "---------------------\n",
         "{context_str}\n",
