--- a/docs/_source/guides/llms/examples/fine-tuning-openai-rag-feedback.ipynb
+++ b/docs/_source/guides/llms/examples/fine-tuning-openai-rag-feedback.ipynb
@@ -300,6 +300,24 @@
     {
       "attachments": {},
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "You can also browse and play with the datasets (hosted with Argilla Hugging Face Spaces). User and password: argilla / 12345678. The dataset for this stage is `customer-assistant` and for the evaluation step is `finetuned-vs-base-preference`."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "%%html \n",
+        "<iframe src=\"https://argilla-fine-tune-chat-gpt.hf.space\" frameborder=\"0\" width=\"100%\" height=\"800\"></iframe>"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
       "metadata": {
         "id": "9yLxmSDsQPts"
       },
@@ -538,7 +556,7 @@
         "\n",
         "If we show the fine-tuned model response always as the first option, we can introduce position bias (labelers always choosing a certain position) or making it evident to users there are two clearly different models.\n",
         "\n",
-        "To avoid this, we randomize the position and keep two metadata fields indicating which model has produced `response-1` and `response-2`. When collecting the responses, we'll use this medata to map the ranking with each model."
+        "To avoid this, we randomize the position and keep two metadata fields indicating which model has produced `response-1` and `response-2`. When collecting the responses, we'll use this metadata to map the ranking with each model."
       ]
     },
     {
@@ -748,7 +766,8 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.9.6"
     }
   },
   "nbformat": 4,
